resolving issues related to build